@@ -12,6 +12,8 @@ repositories {
 dependencies {
     implementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.10.0'
     runtimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.10.0'
+    implementation 'org.openjfx:javafx-controls:20.0.1'
+    implementation 'org.openjfx:javafx-fxml:20.0.1'
 }
 
 test {
@@ -29,7 +31,7 @@ test {
 }
 
 application {
-    mainClass.set("shoai.ShoAI")
+    mainClass.set("shoai.Main")
 }
 
 shadowJar {
@@ -40,6 +42,10 @@ shadowJar {
 
 run {
     standardInput = System.in
+    jvmArgs = [
+            '--module-path', classpath.asPath,
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
 }
 
 checkstyle {
